02-nginx-webserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mynginx
  name: mynginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mynginx
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mynginx
  name: mynginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mynginx
  template:
    metadata:
      labels:
        app: mynginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
