03-tomcat-webappserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mytomcat
  name: mytomcat
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: mytomcat
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mytomcat
  name: mytomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mytomcat
  template:
    metadata:
      labels:
        app: mytomcat
    spec:
      containers:
      - image: tomee:latest
        name: nginx
        ports:
        - containerPort: 8080
