04-httpd-webserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myhttpd
  name: myhttpd
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: myhttpd
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myhttpd
  name: myhttpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myhttpd
  template:
    metadata:
      labels:
        app: myhttpd
    spec:
      containers:
      - image: centos/httpd:latest
        name: nginx
        ports:
        - containerPort: 80
